--- a/ui files/Preferences.ui
+++ b/ui files/Preferences.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Preferences</class>
- <widget class="QWidget" name="Preferences">
+ <widget class="QDialog" name="Preferences">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,7 +14,7 @@
    <string>Preferences</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="0" column="0" colspan="4">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -28,7 +28,7 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="1" column="0">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="GeolocateButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -41,7 +41,7 @@
         </widget>
        </item>
        <item row="3" column="0">
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="LatInputBox">
          <property name="toolTip">
           <string/>
          </property>
@@ -70,14 +70,14 @@
         </spacer>
        </item>
        <item row="4" column="1">
-        <widget class="QPushButton" name="pushButton_3">
+        <widget class="QPushButton" name="LoadButton">
          <property name="text">
           <string>Load from file</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0" colspan="3">
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="CurrentLatLon">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -92,14 +92,14 @@
         </widget>
        </item>
        <item row="4" column="0">
-        <widget class="QLineEdit" name="lineEdit_2">
+        <widget class="QLineEdit" name="LonInputBox">
          <property name="placeholderText">
           <string>Input longitude here</string>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="SaveButton">
          <property name="text">
           <string>Save to file</string>
          </property>
@@ -149,21 +149,21 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="3" column="0">
-        <widget class="QPushButton" name="pushButton_4">
+        <widget class="QPushButton" name="TLEadd">
          <property name="text">
           <string>Add source</string>
          </property>
         </widget>
        </item>
        <item row="3" column="2">
-        <widget class="QPushButton" name="pushButton_6">
+        <widget class="QPushButton" name="TLEremove">
          <property name="text">
           <string>Delete source</string>
          </property>
         </widget>
        </item>
        <item row="0" column="2">
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="TLEupdateUnit">
          <item>
           <property name="text">
            <string>Hours</string>
@@ -187,14 +187,14 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QPushButton" name="pushButton_5">
+        <widget class="QPushButton" name="TLEedit">
          <property name="text">
           <string>Edit source</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0" colspan="4">
-        <widget class="QLineEdit" name="lineEdit_3">
+        <widget class="QLineEdit" name="TLEsource">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -214,7 +214,7 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QSpinBox" name="spinBox">
+        <widget class="QSpinBox" name="TLEupdatePeriod">
          <property name="minimum">
           <number>1</number>
          </property>
@@ -237,7 +237,7 @@
         </widget>
        </item>
        <item row="4" column="0" colspan="4">
-        <widget class="QListView" name="listView"/>
+        <widget class="QListView" name="TLElist"/>
        </item>
       </layout>
      </widget>
@@ -247,7 +247,7 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_4">
        <item row="2" column="1">
-        <widget class="QPushButton" name="pushButton_8">
+        <widget class="QPushButton" name="SatelliteRemove">
          <property name="text">
           <string>Delete satellite</string>
          </property>
@@ -261,25 +261,59 @@
         </widget>
        </item>
        <item row="1" column="0" colspan="2">
-        <widget class="QLineEdit" name="lineEdit_4">
+        <widget class="QLineEdit" name="SatelliteIDbox">
          <property name="placeholderText">
           <string>Type the 5 digit NORAD ID number of the satellites you want to track here</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
-        <widget class="QPushButton" name="pushButton_7">
+        <widget class="QPushButton" name="SatelliteAdd">
          <property name="text">
           <string>Add satellite</string>
          </property>
         </widget>
        </item>
        <item row="3" column="0" colspan="2">
-        <widget class="QListView" name="listView_2"/>
+        <widget class="QListView" name="SatelliteList"/>
        </item>
       </layout>
      </widget>
     </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QPushButton" name="SaveButton_2">
+     <property name="text">
+      <string>Save</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="CancelButton">
+     <property name="text">
+      <string>Cancel</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QPushButton" name="RestoreDefButton">
+     <property name="text">
+      <string>Restore defaults</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
