--- a/ui files/ErrorID_1orMore.ui
+++ b/ui files/ErrorID_1orMore.ui
@@ -37,7 +37,8 @@
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Error: Invalid satellite ID</string>
+      <string>Error: One or more invalid satellite ID
+Note: ID must be 5 digits</string>
      </property>
     </widget>
    </item>
