--- a/ui files/Preferences.ui
+++ b/ui files/Preferences.ui
@@ -274,7 +274,10 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="UpdateRate">
+         <property name="text">
+          <string>1000</string>
+         </property>
          <property name="placeholderText">
           <string>Enter a value in milliseconds</string>
          </property>
