--- a/ui_files/Radio.ui
+++ b/ui_files/Radio.ui
@@ -41,28 +41,28 @@
    <item row="1" column="1">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Port</string>
+      <string>Port:</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1">
     <widget class="QLabel" name="label_8">
      <property name="text">
-      <string>Signaling</string>
+      <string>Signaling:</string>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
     <widget class="QLabel" name="label_7">
      <property name="text">
-      <string>LO Up</string>
+      <string>LO Up:</string>
      </property>
     </widget>
    </item>
    <item row="3" column="5">
     <widget class="QLabel" name="label_10">
      <property name="text">
-      <string>MHz</string>
+      <string>Hz</string>
      </property>
     </widget>
    </item>
@@ -97,14 +97,14 @@
    <item row="2" column="1">
     <widget class="QLabel" name="label_6">
      <property name="text">
-      <string>LO Down</string>
+      <string>LO Down:</string>
      </property>
     </widget>
    </item>
    <item row="2" column="5">
     <widget class="QLabel" name="label_9">
      <property name="text">
-      <string>MHz</string>
+      <string>Hz</string>
      </property>
     </widget>
    </item>
